<resources>
    <string name="app_name">Quiz</string>
    <string name="question_screen_title">Question Screen</string>
    <string name="cheat_screen_title">Cheat Screen</string>

    <string name="false_label">False</string>
    <string name="true_label">True</string>

    <string name="correct_label">Correct!</string>
    <string name="incorrect_label">Incorrect!</string>
    <string name="cheat_label">Cheat</string>
    <string name="next_label">Next</string>

    <string name="confirmation_label">Are you sure?</string>
    <string name="yes_label">Yes</string>
    <string name="no_label">No</string>
</resources>
